// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedFilterSwitch expect to render without error 1`] = `
<Switch
  aria-label=""
  isChecked={true}
  isDisabled={false}
  isReversed={false}
  label="Selected only"
  onChange={[Function]}
/>
`;

exports[`SelectedFilterSwitch expect to render without error 2`] = `
<Switch
  aria-label=""
  isChecked={false}
  isDisabled={false}
  isReversed={false}
  label="Selected only"
  onChange={[Function]}
/>
`;
